--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@
         <h2 class="section-title" data-key="about_title" data-aos="fade-up">Tentang Kami</h2>
         <div class="profile-flex">
             <div class="profile-img-wrapper" data-aos="fade-right">
-                <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?auto=format&fit=crop&q=80&w=400" alt="Sri Mulyani Budhi">
+                <img src="foto.jpg" alt="Sri Mulyani Budhi">
             </div>
             <div class="profile-content" data-aos="fade-left">
                 <h3 style="font-size: 2rem;">Sri Mulyani Budhi</h3>
@@ -1089,4 +1089,5 @@
         document.head.appendChild(style);
     </script>
 </body>
+
 </html>
